Corretto primo link menu destra

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </div>
             <div class="header-right">
                 <div class="menu">
-                    <div id="attivo" class="menu-item">
-                        <a href="#">Tariffazione</a>
+                    <div class="menu-item">
+                        <a id="attivo" href="#">Tariffazione</a>
                     </div>
                     <div class="menu-item">
                         <a id="attivo" href="#">Accounts</a>
