Eliminato id delle a che era scorretto

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div class="header-right">
                 <div class="menu">
                     <div class="menu-item">
-                        <a id="attivo" href="#">Tariffazione</a>
+                        <a href="#">Tariffazione</a>
                     </div>
                     <div class="menu-item">
-                        <a id="attivo" href="#">Accounts</a>
+                        <a href="#">Accounts</a>
                         <div class="dropdown-menu">
                             <div class="dropdown-menu-item">
                                 <a href="#">Standard</a>
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div class="menu-item">
-                        <a id="attivo" href="#">Prodotti</a>
+                        <a href="#">Prodotti</a>
                         <div class="dropdown-menu">
                             <div class="dropdown-menu-item">
                                 <a href="#">Trasferimenti di denaro</a>
@@ -70,13 +70,13 @@
                         </div>
                     </div>
                     <div class="menu-item">
-                        <a id="attivo" href="#">Azienda</a>
+                        <a href="#">Azienda</a>
                     </div>
                     <div class="menu-item">
-                        <a id="attivo" href="#">Aiuto</a>
+                        <a href="#">Aiuto</a>
                     </div>
                     <div class="menu-item lingua">
-                        <a id="attivo" href="#">IT<span class="fa fa-angle-down"></span></a>
+                        <a href="#">IT<span class="fa fa-angle-down"></span></a>
                         <div class="dropdown-menu">
                             <div class="dropdown-menu-item">
                                 <a  href="#">Italiano</a>
